tests/ui/dst/dst-rvalue.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/dst-rvalue.rs:4:33
   |
LL |     let _x: Box<str> = Box::new(*"hello world");
   |                        -------- ^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |                        |
   |                        required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by a bound in `Box::<T>::new`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
help: references are always `Sized`, even if they point to unsized data; consider not dereferencing the expression
   |
LL -     let _x: Box<str> = Box::new(*"hello world");
LL +     let _x: Box<str> = Box::new("hello world");
   |

error[E0277]: the size for values of type `[isize]` cannot be known at compilation time
  --> $DIR/dst-rvalue.rs:8:37
   |
LL |     let _x: Box<[isize]> = Box::new(*array);
   |                            -------- ^^^^^^ doesn't have a size known at compile-time
   |                            |
   |                            required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `[isize]`
note: required by a bound in `Box::<T>::new`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
help: references are always `Sized`, even if they point to unsized data; consider not dereferencing the expression
   |
LL -     let _x: Box<[isize]> = Box::new(*array);
LL +     let _x: Box<[isize]> = Box::new(array);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
